add mysql replace interface